# DTM-SE-escooter-example

./: .gitignore  DTM wrap-up project.postman_collection.json  LICENSE  README.md  docker-compose.yml  package-lock.json  pipeline.yml
.github/workflows/: pipeline.yml
account-service/: Dockerfile  README.md  account-model.js  account-service.js  package-lock.json  package.json
backend/: README.md  end-to-end-test.sh  pyproject.toml
company-dashboard/: Dockerfile  app.js  package-lock.json  package.json
company-dashboard/public/: escooters-dashboard.html
escooter-agent/: Dockerfile  app.py  pyproject.toml
escooter-agent-simple/: Dockerfile  escooter-agent.js  escooter-device-model.js  package-lock.json  package.json
escooter-agent/it/unibo/escooter/agent/: __init__.py  agent.py
escooter-agent/it/unibo/escooter/tests/: test_agent.py
escooter-service/: Dockerfile  README.md  escooter-model.js  escooter-service.js  package-lock.json  package.json  pyproject.toml
renting-service/: Dockerfile  package-lock.json  package.json  renting-model.js  renting-service.js
user-app/: Dockerfile  README.md  app.js  package.json
user-app/public/: main-page.html  registration-ext.html  registration-failed.html  registration-ok.html  registration.html
