[tool.poetry]
name = "escooter-agent"
version = "0.1.0"
description = "Application running on the e-scooters"
authors = ["Danilo Pianini <danilo.pianini@unibo.it>", "Alessandro Ricci <aricci@unibo.it>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
