[tool.poetry]
name = "escooter-service"
version = "0.1.0"
description = "Backend for the e-scooter application"
authors = ["Danilo Pianini <danilo.pianini@unibo.it>", "Alessandro Ricci <aricci@unibo.it>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
